 cmake_minimum_required( VERSION 2.6 )
 set (CMAKE_CXX_STANDARD 11)
project( cannon_shoot )
find_package( OpenThreads )
find_package( osg )
find_package( osgDB )
find_package( osgGA )
find_package( osgUtil )
find_package( osgViewer )
macro( config_project PROJNAME LIBNAME )
   include_directories( ${${LIBNAME}_INCLUDE_DIR} )
   target_link_libraries( ${PROJNAME} ${${LIBNAME}_LIBRARY} )
endmacro()
add_executable( cannon_shoot main.cpp cannon_game.cpp cannon.cpp pov_handler.cpp skybox.cpp cannon_ball.cpp target.cpp)
config_project( cannon_shoot OPENTHREADS )
config_project( cannon_shoot OSG )
config_project( cannon_shoot OSGDB )
config_project( cannon_shoot OSGGA )
config_project( cannon_shoot OSGUTIL )
config_project( cannon_shoot OSGVIEWER )
if(APPLE)
  add_definitions(-Wno-deprecated-declarations) 
endif()